--- a/templates/admin/tutor/new.html.twig
+++ b/templates/admin/tutor/new.html.twig
@@ -28,6 +28,7 @@
                     </div>            
                 </div>
             </div>
+            <p>* champs obligatoires</p>
             <div class="col text-center mb-3">
                 <button type="submit" class="btn btn-success"><i class="fas fa-check"></i> Créer le tuteur</button>         
             </div>                
