--- a/templates/user/update_password.html.twig
+++ b/templates/user/update_password.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modification Mot de passe{% endblock %}
+{% block title %}Modification du mot de passe{% endblock %}
 
 {% block header %}{% endblock %}
 
 {% block main %}
     <div class="container">
-        <h1>Modification Mot de passe</h1>
+        <h1>Modification du mot de passe</h1>
 
         {{ form_start(form) }}
 
