--- a/templates/admin/tutor/view.html.twig
+++ b/templates/admin/tutor/view.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/base.html.twig' %}
 
-{% block title %}Creation d'un tuteur{% endblock %}
+{% block title %}Patients du Dr {{ tutor.userRelation.lastname }} {{ tutor.userRelation.firstname }} inscrits sur la plateforme{% endblock %}
 
 {% block main %}
     <div class="container-fluid">
@@ -9,7 +9,6 @@
         <table id="usersTable" class="table table-hover">
             <thead>
                 <tr>
-                    <th>Id</th>
                     <th>Nom</th>
                     <th>Prénom</th>
                     <th>Date de création</th>
@@ -21,7 +20,6 @@
             <tbody>
                 {% for user in tutor.users %}
                     <tr>
-                        <th>{{ user.id }}</th>
                         <th>{{ user.firstname }}</th>
                         <th>{{ user.lastname }}</th>
                         <th>{{ user.createdAt | date("d/m/Y H:i", "Europe/Paris") }}</th>
