--- a/templates/admin/user/edit.html.twig
+++ b/templates/admin/user/edit.html.twig
@@ -6,7 +6,7 @@
 
 {% block main %}
     <div class="container ">
-        <h1 class='my-5'>Modification des informations personnels</h1>
+        <h1 class='my-5'>Modification des informations personnelles</h1>
 
         {{ form_start(form) }}
             <div class="row">
