--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -100,7 +100,7 @@
 {% block _registration_termsAccepted_widget %}
     <div class="form-check">
         <input type="checkbox" id="{{ form.vars.id }}" name="registration[{{ form.vars.name }}]" required="required" class="form-check-input" value="1">
-        <label class="form-check-label required" for="{{ form.vars.id }}">j'ai lu et j'accepte <a href="{{ path('home_legales_mentions') }}" target="_blank">les termes et conditions</a></label>
+        <label class="form-check-label required" for="{{ form.vars.id }}">J’ai lu et j’accepte <a href="{{ path('home_legales_mentions') }}" target="_blank">les termes et conditions d’utilisation de la plateforme.</a></label>
     </div>
 {% endblock %}
 
