--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -14,19 +14,29 @@
                     <div class="alert alert-light">
                         <h2 class="alert-heading">Informations générales</h2>
                         <hr>
+                        {% set from_user_is_admin = false %}
+
+                        {% for role in user.getRoles() %} 
+                            {% if role == 'ROLE_ADMIN' %}{% set from_user_is_admin = true %}{% endif %}
+                        {% endfor %}
+
                         {{ form_row(form.firstname) }}
                         {{ form_row(form.lastname) }}
-                        {{ form_row(form.age) }}
+                        {% if from_user_is_admin == false %}
+                            {{ form_row(form.age) }}
+                        {% endif %}    
                         {{ form_row(form.email) }}
                     </div>   
                 </div>
-                <div class="col">
-                    <div class="alert alert-light">
-                        <h2 class="alert-heading">Autres informations</h2>
-                        <hr>
-                        {{ form_row(form.tutor) }}
-                    </div>            
-                </div>
+                {% if from_user_is_admin == false %}
+                    <div class="col">
+                        <div class="alert alert-light">
+                            <h2 class="alert-heading">Autres informations</h2>
+                            <hr>
+                            {{ form_row(form.tutor) }}
+                        </div>            
+                    </div>
+                {% endif %}    
             </div>
             <div class="col text-center mb-3">
                 <button type="submit" class="btn btn-success"><i class="fas fa-check"></i> Mise à jour</button>         
