--- a/templates/admin/tutor/edit.html.twig
+++ b/templates/admin/tutor/edit.html.twig
@@ -30,6 +30,7 @@
                     </div>            
                 </div>
             </div>
+            <p>* champs obligatoires</p>
             <div class="col text-center mb-3">
                 <button type="submit" class="btn btn-success"><i class="fas fa-check"></i> Mise a jour</button>         
             </div>                
