Modifications page public

--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -15,9 +15,9 @@
     <!-- Header -->
     <header class="masthead bg-primary-custom text-white text-center">
         <div class="container">
-            <h1 class="text-uppercase mb-0">Accès Public</h1>
+            <h1 class="text-uppercase mb-0">Plateforme de formation</h1>
             <hr class="star-light">
-            <h2 class="font-weight-light mb-0">Cette plateforme s’adresse aux patients des médecins libéraux de PACA, afin de soutenir leur activité de soins en tant qu’acteurs régionaux de Santé Publique.</h2>
+            <h2 class="font-weight-light mb-0">Cette plateforme propose des jeux sérieux et autres activités d'éducation thérapeutique à destination des patients et de leur entourage.</h2>
         </div>
     </header>
 
