--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -27,6 +27,12 @@
             <span>Tableau de bord</span></a>
         </li>
 
+        <li class="nav-item active">
+          <a class="nav-link" href="{{ path('admin_public_index') }}">
+          <i class="fas fa-chart-bar"></i>
+          <span>Trafic public</span></a>
+        </li>
+
         <!-- Divider -->
         <hr class="sidebar-divider">
 
