--- a/templates/admin/public/index.html.twig
+++ b/templates/admin/public/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'admin/base.html.twig' %}
 
-{% block title %}Trafic utilisateur espace public{% endblock %}
+{% block title %}Trafic utilisateurs du lien public de la plateforme{% endblock %}
 
 {% block main %}
     <div class="container-fluid">
       <!-- Page Heading -->
       <div class="d-sm-flex align-items-center justify-content-between mb-4">
-          <h1 class="h3 mb-0 text-gray-800">Trafic utilisateur espace public</h1>
+          <h1 class="h3 mb-0 text-gray-800">Trafic utilisateurs du lien public de la plateforme</h1>
       </div>
 
       <div class="row justify-content-md-center">
@@ -16,7 +16,7 @@
           <div class="card shadow mb-4">
             <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-              <h6 class="m-0 font-weight-bold text-primary">Trafic sur la plateforme public ({{ year }})</h6>
+              <h6 class="m-0 font-weight-bold text-primary">Trafic sur la plateforme publique ({{ year }})</h6>
               <div class="dropdown no-arrow">
                 <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -41,7 +41,7 @@
         <div class="col-xl-6 col-lg-6 align-items-center">
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Trafic sur la plateforme public détails</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Trafic sur la plateforme publique détails</h6>
                 </div>
                 <div class="card-body">
                     <div class="chart-bar">
@@ -58,7 +58,7 @@
           <div class="card shadow mb-4">
             <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-              <h6 class="m-0 font-weight-bold text-primary">Trafic sur le serious game ({{ year }})</h6>
+              <h6 class="m-0 font-weight-bold text-primary">Trafic sur le serious game Gluciboat ({{ year }})</h6>
               <div class="dropdown no-arrow">
                 <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -83,7 +83,7 @@
         <div class="col-xl-6 col-lg-6 align-items-center">
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Trafic sur le serious game détails</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Trafic sur le serious game Gluciboat détails</h6>
                 </div>
                 <div class="card-body">
                     <div class="chart-bar">
@@ -122,7 +122,7 @@
             datasets: [{
             label: "Utilisateur(s)",
             lineTension: 0.3,
-            backgroundColor: "rgba(78, 115, 223, 0.05)",
+            backgroundColor: "#1cc88a",
             borderColor: "#1cc88a",
             pointRadius: 3,
             pointBackgroundColor: "#1cc88a",
@@ -322,7 +322,7 @@
             options: {        
                 title: {
                     display: true,
-                    text: 'Nombre de visite par jour pour le mois de ' + labelsMonth[month]
+                    text: 'Nombre de visites par jour pour le mois de ' + labelsMonth[month]
                 },
                 maintainAspectRatio: false,
                 layout: {
