correction couleur courbe

--- a/templates/admin/public/index.html.twig
+++ b/templates/admin/public/index.html.twig
@@ -122,7 +122,7 @@
             datasets: [{
             label: "Utilisateur(s)",
             lineTension: 0.3,
-            backgroundColor: "#1cc88a",
+            backgroundColor: "rgba(78, 115, 223, 0.05)",
             borderColor: "#1cc88a",
             pointRadius: 3,
             pointBackgroundColor: "#1cc88a",
